fix: website overflowing in Chromium add max-width

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: #fafafa;
-  max-width: 100vw;
+  width: 100vw;
+  max-width: 100%;
 }
 
 h1 {
